--- a/app/templates/search/filter.html
+++ b/app/templates/search/filter.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/static/filter.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename = 'css/filter.css') }}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <script src="/static/filter.js"></script>
+
+    <script src="{{ url_for('static', filename = 'js/filter.js') }}" ></script>
   </head>
   <body class="align">
     <div class="grid">
@@ -58,6 +59,7 @@
         </div>
       </div>
       </form>
+
     </div>
   </body>
 </html>
