--- a/app/templates/search/results.html
+++ b/app/templates/search/results.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="static/results.css" rel="stylesheet" type="text/css" />
+
+    <link href="{{ url_for('static', filename = 'css/results.css') }}" rel="stylesheet">
     <script src="https://unpkg.com/vue"></script>
+
   </head>
   <body>
     <h1 class="title">Your Recomended Games</h1>
@@ -36,6 +38,7 @@
 
 
 </div>
+<script src="{{ url_for('static', filename = 'js/results.js') }}"></script>
     <script src="static/results.js"></script>
   </body>
 </html>
